@@ -1,3 +1,15 @@
+2015-05-07  Aldy Hernandez  <aldyh@redhat.com>
+
+	* gcc-interface/gigi.h (note_types_used_by_globals): New prototype.
+	* gcc-interface/misc.c (gnat_parse_file): Call
+	note_types_used_by_globals.
+	* gcc-interface/utils.c: Remove global_decls.
+	(gnat_pushdecl): Remove use of global_decls.
+	(gnat_write_global_declarations): Rename to
+	note_types_used_by_globals.
+	Remove call to finalize_compilation_unit.
+	Remove explicit call to debug_hooks.
+
 2015-04-27  Jim Wilson  <jim.wilson@linaro.org>
 
 	* gcc-interface/Makefile-lan.in (ada.mostlyclean): Remove gnatbind
